@@ -1,3 +1,9 @@
+2010-04-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* m4/ax_boost_base.m4:
+	* m4/ax_boost_program_options.m4:
+	- updated autoconf macros.
+
 2010-01-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* qt4/main.cpp:
